Revision history for Perl module TestRail::API

0.031 2015-08-14 TEODESIAN
    - Update getCases to use testRail 4.0 filters, change filter args to HASHREF
    - Update TestRail::API::getCaseByName to take filter hashref too

0.030 2015-07-31 TEODESIAN
    - Fix testrail-tests, was calling function in incorrect namespace
    - Fix testrail-bulk-mark-results, was not including library
    - Re-instate integration tests for binaries that were removed in 0.029
    - Require more up-to-date Pod::Perldoc for help that works on old unices/perls
    - Fix windows issue with TestRail::Find

0.029 2015-07-30 TEODESIAN
    - Add bulkAddResults function to TestRail::API
    - Add new script testrail-bulk-mark-results and it's backend TestRail::Utils::Results
    - Add new script testrail-lock and it's backend TestRail::Utils::Lock
    - Re-factor much of the bin/ scripts into TestRail::Utils
    - Modify all bin/ scripts to use POD as their help output, move help() to TestRail::Utils
    - Modify all bin/ scripts to parse all the ~/.testrailrc options
    - Fix an issue where statusNamesToIDs would return status IDs in the wrong order.
    - Re-factor to use Type::Tiny parameter checking.
    - Fix getCaseTypeByName, it's apparently been broken/noncovered this whole time
    - Add options to sort FIFO/LIFO by creation, milestone due date in testrail-runs
    - Add TestRail::Utils::Find as a backend to testrail-runs & testrail-tests, expand unit tests
    - Move Test::LWP::UserAgent::TestRailMock to t/lib, no need to install it for users

0.028 2015-06-16 TEODESIAN
    - Hotfix: forgot to include a module in the prove plugin.  How did this pass compile.t? A mystery.
    - Fix an issue where testrail-report incorrectly identified (or failed to identify) the file tested.
    - Add character encoding support to TestRail::API and all its callers (default to utf8)

0.027 2015-06-14 TEODESIAN