@@ -3,6 +3,8 @@ Revision history for Perl module TestRail::API
 0.031 2015-08-14 TEODESIAN
     - Update getCases to use testRail 4.0 filters, change filter args to HASHREF
     - Update TestRail::API::getCaseByName to take filter hashref too
+    - Update getRunSummary and getPlanSummary to use 'labels' rather than system names
+    - Add TestRail::API::statusNamesToLabels to ease interaction with above method updates
 
 0.030 2015-07-31 TEODESIAN
     - Fix testrail-tests, was calling function in incorrect namespace
